Desktop and mobile main-content layout issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,27 @@
 
 .header{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: var(--primary-color);
     padding: 1rem;
     color: var(--secundary-color);
 }
+.header > button{
+    padding-inline: 1rem;
+}
+
+/*  */
+
+.aside{
+    display: none;
+}
+
+/*  */
 
 .main{
     display: flex;
     width: 100%;
     justify-content: center;
-    height: 100%;
 }
 
 @media screen and (max-width: 600px){
@@ -27,52 +37,83 @@
 
 /*  */
 
-.main__left{
+.main__content{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    align-items: center;
-    width: 50%;
 }
-.main__left > h2{
-    /* background-color: red; */
-    width: 100%;
-    padding: 1rem 0;
-    text-align: center;
-}
+
+/*  */
+
 .search__field{
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    justify-content: space-between;
+    padding: 1rem;
+    width: 100%;
 }
-.search__field > form > input, .search__field > form > button{
+
+.search__input{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.search__input > input, .search__input > button{
     padding: .5rem;
+}
+.search__input > input{
+    width: 100%;
+}
+.search__input > button{
+    padding-inline: 1rem;
+}
+
+.search__controlls{
+    width: 25%;
+    display: flex;
+}
+.search__controlls > button{
+    padding: 0.5rem;
+    width: 100%;
 }
 
 @media screen and (max-width: 600px){
-    .main__left{
+    .search__field{
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    .search__input, .search__controlls{
         width: 100%;
     }
 }
 
 /*  */
 
-.main__right{
+.search__results{
+    background-color: var(--primary-color);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    flex-wrap: wrap;
+    padding: 0.5rem;
+}
+
+.result__item{
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    align-items: center;
-    width: 50%;
+    width: 25%;   
+    padding: 0.5rem;
 }
-.main__right > h2{
-    /* background-color: red; */
+.result__item > img{
+    display: block;
     width: 100%;
-    text-align: center;
-    padding: 1rem 0;
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
 }
 
 @media screen and (max-width: 600px){
-    .main__right{
-        width: 100%;
+    .result__item{
+        width: 50%;
     }
 }
